--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "kudos-ionic-pwa",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Derek Williams",
+  "description": "QuickKudos - Because there's more to life than cash",
+  "homepage": "http://github.com/derekwlms/kudos-ionic-pwa/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,7 +20,9 @@
     "@angular/http": "~6.1.1",
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
+    "@angular/pwa": "^0.10.2",
     "@angular/router": "~6.1.1",
+    "@angular/service-worker": "~6.1.1",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
@@ -53,6 +56,5 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
-  },
-  "description": "An Ionic project"
+  }
 }
